--- a/Display/TransportInfo.xaml
+++ b/Display/TransportInfo.xaml
@@ -39,20 +39,41 @@
                             <RowDefinition Height="70"/>
                             <RowDefinition Height="70"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="搬出日"/>
-                        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding inProcess.TransportDate,Converter={StaticResource DateTimeConverter}}"/>
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="品 番"/>
-                        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding inProcess.ProductName}" FontWeight="Bold"/>
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="ロット番号"/>
-                        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding inProcess.LotNumber}"/>
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="形 状"/>
-                        <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding management.ShapeName}"/>
-                        <TextBlock Grid.Row="4" Grid.Column="0" Text="重 量"/>
-                        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal"  >
-                            <TextBlock Text="{Binding inProcess.Unit,Converter={StaticResource CurrencyConverter},FallbackValue=200}"/>
-                            <TextBlock Text="kg" FontSize="40" TextAlignment="Center" Margin="20,0,0,0"/>
-                        </StackPanel>
-                        <TextBlock Grid.Row="5" Grid.Column="0" Text="担当者"/>
+                        <Viewbox Grid.Row="0" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="搬出日"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="0" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding inProcess.TransportDate,Converter={StaticResource DateTimeConverter},FallbackValue=2024年12月19日}"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="品 番"/>
+                        </Viewbox>
+                        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding inProcess.ProductName,FallbackValue=MH024000}" FontWeight="Bold"/>
+
+                        <Viewbox Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="ロット番号"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="2" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <TextBlock Text="{Binding inProcess.LotNumber,FallbackValue=202408-001}"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="形 状"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="3" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <TextBlock Text="{Binding management.ShapeName,FallbackValue=シート}"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="重 量"/>
+                        </Viewbox>
+                        <Viewbox Grid.Row="4" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
+                            <StackPanel  Orientation="Horizontal"  >
+                                <TextBlock Text="{Binding inProcess.Unit,Converter={StaticResource CurrencyConverter},FallbackValue=200}"/>
+                                <TextBlock Text="kg" TextAlignment="Center" Margin="20,0,0,0"/>
+                            </StackPanel>
+                        </Viewbox>
+                        <Viewbox Grid.Row="5" Grid.Column="0" Style="{StaticResource Label}">
+                            <TextBlock Text="担当者"/>
+                        </Viewbox>
                         <TextBox Grid.Row="5" x:Name="TextWorker" Grid.Column="1" Text="{Binding inProcess.TransportWorker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" InputMethod.IsInputMethodEnabled="True" IsEnabled="{Binding IsEnable}">
                             <TextBox.Resources>
@@ -87,10 +108,12 @@
         <Grid Grid.Row="2" Visibility="{Binding IsEnable,Converter={StaticResource CollapsedConverter}}">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                 <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Regist">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
-                        <TextBlock Text="{Binding ButtonName}"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
+                            <TextBlock Text="{Binding ButtonName,FallbackValue=登 録}"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Regist"/>
@@ -98,10 +121,12 @@
                     </i:Interaction.Triggers>
                 </Button>
                 <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Cancel" Visibility="{Binding VisibleCancel,Converter={StaticResource CollapsedConverter}}">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Erase" Margin="0,3,20,0" Height="30" Width="30"/>
-                        <TextBlock Text="取　消"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="Erase" Margin="0,3,20,0" Height="30" Width="30"/>
+                            <TextBlock Text="取　消"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Cancel"/>
