--- a/Display/Control/ControlWorkProcess.xaml
+++ b/Display/Control/ControlWorkProcess.xaml
@@ -19,10 +19,12 @@
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
                 <Button Style="{StaticResource Select}" Command="{Binding CommandButton}" CommandParameter="Process" Visibility="{Binding VisivleProcess,Converter={StaticResource CollapsedConverter}}" Margin="10,0,0,20">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Wrench" Margin="0,3,10,0" Height="30" Width="30"/>
-                        <TextBlock Text="設備別" FontWeight="Medium"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}" Margin="5">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="Wrench" Margin="0,3,10,0" Height="30" Width="30"/>
+                            <TextBlock Text="設備別" FontWeight="Medium"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Process"/>
@@ -30,10 +32,12 @@
                     </i:Interaction.Triggers>
                 </Button>
                 <Button Style="{StaticResource Select}" Command="{Binding CommandButton}" CommandParameter="All" Visibility="{Binding VisivleAll,Converter={StaticResource CollapsedConverter}}" Margin="10,0,0,20">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Wrench" Margin="0,3,10,0" Height="30" Width="30"/>
-                        <TextBlock Text="全工程" FontWeight="Medium"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}" Margin="5">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="Wrench" Margin="0,3,10,0" Height="30" Width="30"/>
+                            <TextBlock Text="全工程" FontWeight="Medium"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="All"/>
