--- a/Display/WindowMain.xaml
+++ b/Display/WindowMain.xaml
@@ -133,7 +133,7 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                         </Button>
-                        <Button Style="{StaticResource Top}" Command="{Binding CommandButton}" CommandParameter="Manual" Visibility="Collapsed">
+                        <Button Style="{StaticResource Top}" Command="{Binding CommandButton}" CommandParameter="F5" Visibility="Collapsed">
                             <Viewbox Stretch="Uniform" Margin="-3">
                                 <materialDesign:PackIcon Kind="MovieOpen" Height="35" Width="35" HorizontalAlignment="Center"/>
                             </Viewbox>
