--- a/Display/ManufactureInfo.xaml
+++ b/Display/ManufactureInfo.xaml
@@ -49,7 +49,7 @@
                             <TextBlock Text="品 番"/>
                         </Viewbox>
                         <Viewbox Grid.Row="1" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
-                            <TextBlock Text="{Binding manufacture.ProductName,FallbackValue=MH024000}" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding ProductName,FallbackValue=MH024000}" FontWeight="Bold"/>
                         </Viewbox>
                         <Viewbox Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Stretch="Uniform" Margin="0,13,13,13">
                             <TextBlock Text="ロット番号"/>
@@ -185,7 +185,7 @@
                             </Viewbox>
                         </StackPanel>
                         <Viewbox Grid.Row="6" Grid.Column="0" Style="{StaticResource Label}">
-                            <TextBlock Text="{Binding management.AmountLabel,FallbackValue=数 量}" Visibility="{Binding VisiblePackaging,Converter={StaticResource CollapsedConverter}}"/>
+                            <TextBlock Text="{Binding management.LabelAmount,FallbackValue=数 量}" Visibility="{Binding VisiblePackaging,Converter={StaticResource CollapsedConverter}}"/>
                         </Viewbox>
                         <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
                             <TextBox x:Name="TextAmount" Text="{Binding manufacture.Amount}" Width="130" 
