--- a/Display/InProcessInfo.xaml
+++ b/Display/InProcessInfo.xaml
@@ -43,13 +43,13 @@
                             <TextBlock Text="搬入日"/>
                         </Viewbox>
                         <Viewbox Grid.Row="0" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding inProcess.InProcessDate,Converter={StaticResource DateTimeConverter},FallbackValue=2024年7月21日}"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding InProcessDate,Converter={StaticResource DateTimeConverter}, FallbackValue=2024年7月21日}"/>
                         </Viewbox>
                         <Viewbox Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="品 番"/>
                         </Viewbox>
                         <Viewbox Grid.Row="1" Grid.Column="1" Style="{StaticResource Label}" Margin="0,10,10,10">
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding management.ProductName,FallbackValue=MH024000}" FontWeight="Bold"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ProductName, FallbackValue=MH024000}" FontWeight="Bold"/>
                         </Viewbox>
                         <Viewbox Grid.Row="2" Grid.Column="0" Style="{StaticResource Label}">
                             <TextBlock Text="ロット番号"/>
@@ -80,7 +80,7 @@
                         <Viewbox Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">
                             <TextBlock Text="担当者"/>
                         </Viewbox>
-                        <TextBox Grid.Row="3" Grid.Column="1" x:Name="TextWorker" Text="{Binding inProcess.Worker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
+                        <TextBox Grid.Row="3" Grid.Column="1" x:Name="TextWorker" Text="{Binding Worker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" InputMethod.PreferredImeConversionMode="FullShape,Native" InputMethod.IsInputMethodEnabled="True">
                             <TextBox.Resources>
                                 <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
@@ -101,10 +101,10 @@
                             </i:Interaction.Behaviors>
                         </TextBox>
                         <Viewbox Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">
-                            <TextBlock Text="{Binding LabelWeight ,FallbackValue=重 量}" Visibility="{Binding VisibleItem1,Converter={StaticResource CollapsedConverter}}"/>
+                            <TextBlock Text="{Binding LabelWeight, FallbackValue=重 量}" Visibility="{Binding VisibleItem1, Converter={StaticResource CollapsedConverter}}"/>
                         </Viewbox>
-                        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Visibility="{Binding VisibleItem1,Converter={StaticResource CollapsedConverter}}">
-                            <TextBox x:Name="TextWeight" Text="{Binding inProcess.Weight}" Width="150" materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" 
+                        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Visibility="{Binding VisibleItem1, Converter={StaticResource CollapsedConverter}}">
+                            <TextBox x:Name="TextWeight" Text="{Binding Weight}" Width="150" materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" 
                                         MaxLength="{Binding AmountLength}" InputMethod.IsInputMethodEnabled="False">
                                 <TextBox.Resources>
                                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
@@ -125,15 +125,15 @@
                                 </i:Interaction.Behaviors>
                             </TextBox>
                             <Viewbox Grid.Row="2" Grid.Column="1" Style="{StaticResource Label}" Margin="10,40,0,5">
-                                <TextBlock Text="{Binding Notice}" VerticalAlignment="Bottom" Foreground="#FF0000" FontWeight="Bold" Visibility="{Binding IsEnable,Converter={StaticResource CollapsedConverter}}"/>
+                                <TextBlock Text="{Binding Notice}" VerticalAlignment="Bottom" Foreground="#FF0000" FontWeight="Bold" Visibility="{Binding IsEnable, Converter={StaticResource CollapsedConverter}}"/>
                             </Viewbox>
                         </StackPanel>
 
                         <Viewbox Grid.Row="{Binding AmountRow,FallbackValue=5}" Grid.Column="0" Style="{StaticResource Label}">
-                            <TextBlock Text="{Binding inProcess.LabelUnit,FallbackValue=数 量}"/>
+                            <TextBlock Text="{Binding LabelUnit, FallbackValue=数 量}"/>
                         </Viewbox>
                         <StackPanel Grid.Row="{Binding AmountRow,FallbackValue=5}" Grid.Column="1" Orientation="Horizontal">
-                            <TextBox x:Name="TextUnit" Text="{Binding inProcess.Unit}" Width="150" InputMethod.IsInputMethodEnabled="False"
+                            <TextBox x:Name="TextUnit" Text="{Binding Unit}" Width="150" InputMethod.IsInputMethodEnabled="False"
                                         materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding UnitLength}">
                                 <TextBox.Resources>
                                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
@@ -153,7 +153,7 @@
                                     <local:TextBoxMode Mode="Number"/>
                                 </i:Interaction.Behaviors>
                             </TextBox>
-                            <CheckBox x:Name="CheckCompleted" IsChecked="{Binding inProcess.Completed,Converter={StaticResource CompletConverter}}" FontSize="20" Width="150">
+                            <CheckBox x:Name="CheckCompleted" IsChecked="{Binding Completed, Converter={StaticResource CompletConverter}}" FontSize="20" Width="150">
                                 <Viewbox Stretch="Uniform" Margin="10,10,10,10">
                                     <TextBlock Text="ロット完了"/>
                                 </Viewbox>
@@ -180,10 +180,10 @@
                             </CheckBox>
                         </StackPanel>
                         <Viewbox Grid.Row="6" Grid.Column="0" Style="{StaticResource Label}">
-                            <TextBlock Text="{Binding management.LabelAmount,FallbackValue=枚 数}" Visibility="{Binding VisibleItem2,Converter={StaticResource CollapsedConverter}}"/>
+                            <TextBlock Text="{Binding management.LabelAmount,FallbackValue=枚 数}" Visibility="{Binding VisibleItem2, Converter={StaticResource CollapsedConverter}}"/>
                         </Viewbox>
                         <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
-                            <TextBox x:Name="TextAmount" Text="{Binding inProcess.Amount}" Width="{Binding AmountWidth,FallbackValue=150}"
+                            <TextBox x:Name="TextAmount" Text="{Binding Amount}" Width="{Binding AmountWidth, FallbackValue=150}"
                                         materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding AmountLength}"
                                         Visibility="{Binding VisibleItem2,Converter={StaticResource CollapsedConverter}}" InputMethod.IsInputMethodEnabled="False">
                                 <TextBox.Resources>
@@ -205,20 +205,20 @@
                                 </i:Interaction.Behaviors>
                             </TextBox>
                             <Viewbox Stretch="Uniform" Margin="0,12,12,12">
-                                <StackPanel Orientation="Horizontal" Visibility="{Binding management.VisibleCoil,Converter={StaticResource CollapsedConverter}}">
-                                    <TextBlock Text="{Binding inProcess.Coil,Converter={StaticResource CircleEnclosingConverter},FallbackValue=①}" Visibility="{Binding IsEnable,Converter={StaticResource CollapsedConverter}}" FontSize="35" TextAlignment="Center" Width="55"/>
-                                    <TextBlock Text="／" FontSize="35" TextAlignment="Center" Visibility="{Binding management.VisibleCoil,Converter={StaticResource CollapsedConverter}}"/>
-                                    <TextBlock Text="{Binding management.ShirringUnit,Converter={StaticResource CircleEnclosingConverter},FallbackValue=②}" FontSize="35" TextAlignment="Center" Width="55"/>
+                                <StackPanel Orientation="Horizontal" Visibility="{Binding VisibleCoil,Converter={StaticResource CollapsedConverter}}">
+                                    <TextBlock Text="{Binding Coil,Converter={StaticResource CircleEnclosingConverter}, FallbackValue=①}" Visibility="{Binding IsEnable, Converter={StaticResource CollapsedConverter}}" FontSize="35" TextAlignment="Center" Width="55"/>
+                                    <TextBlock Text="／" FontSize="35" TextAlignment="Center" Visibility="{Binding VisibleCoil, Converter={StaticResource CollapsedConverter}}"/>
+                                    <TextBlock Text="{Binding ShirringUnit, Converter={StaticResource CircleEnclosingConverter}, FallbackValue=②}" FontSize="35" TextAlignment="Center" Width="55"/>
                                 </StackPanel>
                             </Viewbox>
                         </StackPanel>
                     </Grid>
                     <!-- 右領域 -->
                     <Grid Margin="20,0,0,0" Width="520" HorizontalAlignment="Left" IsEnabled="{Binding IsEnable}">
-                        <Grid  Visibility="{Binding VisibleTenKey,Converter={StaticResource CollapsedConverter},FallbackValue=Visible}">
+                        <Grid  Visibility="{Binding VisibleTenKey, Converter={StaticResource CollapsedConverter},FallbackValue=Visible}">
                             <local:ControlTenKey/>
                         </Grid>
-                        <Grid Visibility="{Binding VisibleWorker,Converter={StaticResource CollapsedConverter},FallbackValue=Collapsed}">
+                        <Grid Visibility="{Binding VisibleWorker, Converter={StaticResource CollapsedConverter},FallbackValue=Collapsed}">
                             <local:ControlWorker/>
                         </Grid>
                     </Grid>
@@ -232,7 +232,7 @@
                     <Viewbox Style="{StaticResource Button}">
                         <WrapPanel>
                             <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
-                            <TextBlock Text="{Binding ButtonName,FallbackValue=登　録}"/>
+                            <TextBlock Text="{Binding ButtonName, FallbackValue=登　録}"/>
                         </WrapPanel>
                     </Viewbox>
                     <i:Interaction.Behaviors>
@@ -244,7 +244,7 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </Button>
-                <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Delete" Visibility="{Binding VisibleDelete,Converter={StaticResource CollapsedConverter}}">
+                <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Delete" Visibility="{Binding VisibleDelete, Converter={StaticResource CollapsedConverter}}">
                     <Viewbox Style="{StaticResource Button}">
                         <WrapPanel>
                             <materialDesign:PackIcon Kind="Delete" Margin="0,3,20,0" Height="30" Width="30"/>
@@ -257,7 +257,7 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </Button>
-                <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Cancel" Visibility="{Binding VisibleCancel,Converter={StaticResource CollapsedConverter}}">
+                <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Cancel" Visibility="{Binding VisibleCancel, Converter={StaticResource CollapsedConverter}}">
                     <Viewbox Style="{StaticResource Button}">
                         <WrapPanel>
                             <materialDesign:PackIcon Kind="Erase" Margin="0,3,20,0" Height="30" Width="30"/>
