--- a/Display/InProcessInfo.xaml
+++ b/Display/InProcessInfo.xaml
@@ -214,11 +214,11 @@
                         </StackPanel>
                     </Grid>
                     <!-- 右領域 -->
-                    <Grid Margin="20,0,0,0" Width="520" HorizontalAlignment="Left" IsEnabled="{Binding IsEnable}">
-                        <Grid  Visibility="{Binding VisibleTenKey, Converter={StaticResource CollapsedConverter},FallbackValue=Visible}">
+                    <Grid Margin="20,0,0,0" Width="520" HorizontalAlignment="Left" IsEnabled="{Binding IsEnable}"  Visibility="{Binding IsEnable, Converter={StaticResource CollapsedConverter}}">
+                        <Grid  Visibility="{Binding VisibleTenKey, Converter={StaticResource CollapsedConverter}, FallbackValue=Visible}">
                             <local:ControlTenKey/>
                         </Grid>
-                        <Grid Visibility="{Binding VisibleWorker, Converter={StaticResource CollapsedConverter},FallbackValue=Collapsed}">
+                        <Grid Visibility="{Binding VisibleWorker, Converter={StaticResource CollapsedConverter}, FallbackValue=Collapsed}">
                             <local:ControlWorker/>
                         </Grid>
                     </Grid>
@@ -226,7 +226,7 @@
             </StackPanel>
         </Grid>
         <!-- 下領域 -->
-        <Grid Grid.Row="1" Visibility="{Binding IsEnable,Converter={StaticResource CollapsedConverter}}">
+        <Grid Grid.Row="1" Visibility="{Binding IsEnable, Converter={StaticResource CollapsedConverter}}">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                 <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Regist">
                     <Viewbox Style="{StaticResource Button}">
