--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -196,6 +196,15 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    <Style x:Key="SelectVideo" TargetType="Button" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Width" Value="170"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Foreground" Value="#FFFFFF"/>
+    </Style>
 
     <!-- チェックボックス -->
     <Style TargetType="CheckBox" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
